[package]
name = "shaphil"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
tokio = { version = "1.26.0", features = ["macros", "rt"] }
serde = { version = "1.0.218", features = ["derive"] }
libsql = "0.6.0"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.6", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-sqlite"] }
shuttle-runtime = "0.52.0"
shuttle-actix-web = "0.52.0"
